backend/server.log
file:///home/vers/Proyectos/mundoctor/backend/src/routes/payments.js:3
import { validateRequest } from '../middleware/validation.js';
         ^^^^^^^^^^^^^^^
SyntaxError: The requested module '../middleware/validation.js' does not provide an export named 'validateRequest'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:123:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:191:5)
    at async ModuleLoader.import (node:internal/modules/esm/loader:336:24)
    at async loadESM (node:internal/process/esm_loader:34:7)
    at async handleMainPromise (node:internal/modules/run_main:106:12)

Node.js v18.19.1
